--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "roboto-fontface": "*",
+    "sweetalert2": "^11.22.0",
     "vue": "^3.5.13",
     "vuetify": "^3.8.1"
   },
